--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -13,3 +13,4 @@ jobs:
           workflow: docker.yml
           wait-for-completion: false
           token: "${{ secrets.REPOSITORY_TOKEN }}"
+          inputs: '{ "release":"true", "readme":"true" }'
